# Web_HW_Module_08

./: README.md
hw_08/: add_data.py  config.ini  db.py  main.py  pyproject.toml  redis_cache.py
hw_08p2/: config.ini  connect_db.py  connect_rabbit.py  consumer.py  models.py  producer.py
