[tool.poetry]
name = "hw-08"
version = "0.1.0"
description = ""
authors = ["SerhiiAndreiko <130772110+SerhiiAndreiko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_08"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
mongoengine = "^0.27.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
